--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /E-commerce-shopping/nbproject/private/
 /E-commerce-shopping/build/
 /E-commerce-shopping/dist/
+/jsfEvidence/nbproject/private/
+/jsfEvidence/build/
