--- a/jsfEvidence/nbproject/project.properties
+++ b/jsfEvidence/nbproject/project.properties
@@ -29,7 +29,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.primefaces-6.0.jar=lib\\primefaces-6.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,7 +40,9 @@ jar.compress=false
 javac.classpath=\
     ${libs.jsf20.classpath}:\
     ${libs.primefaces.classpath}:\
-    ${file.reference.primefaces-6.0.jar}
+    ${libs.hibernate4-support.classpath}:\
+    ${libs.jpa2-persistence.classpath}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -84,6 +85,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=sadriaSocity.war
+war.name=jsfEvidence.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
