--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /jsfEvidence/nbproject/private/
 /jsfEvidence/build/
 /jsfEvidence/dist/
+/jsfcurdevidence/nbproject/private/
+/jsfcurdevidence/build/
