--- a/myEvidence/jstlLogin2/build.xml
+++ b/myEvidence/jstlLogin2/build.xml
@@ -7,8 +7,8 @@
 <!-- the Compile on Save feature is turned off for the project. -->
 <!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
 <!-- in the project's Project Properties dialog box.-->
-<project name="jstlLogin" default="default" basedir=".">
-    <description>Builds, tests, and runs the project jstlLogin.</description>
+<project name="jstlLogin2" default="default" basedir=".">
+    <description>Builds, tests, and runs the project jstlLogin2.</description>
     <import file="nbproject/build-impl.xml"/>
     <!--
 
